Test/senamic_test/zzm_test/test1.output
Error type 8 at Line 7: Type mismatched for return "return"
Error type 4 at Line 9: Redefined function "func1"
Error type 8 at Line 9: Type mismatched for return "return"
Error type 3 at Line 18: Redefined variable "a1"
Error type 5 at Line 19: Type mismatched for assignment "="
Error type 1 at Line 22: Undefined variable "variable"
Error type 2 at Line 22: Undefined function "func"
Error type 5 at Line 23: Type mismatched for assignment "="
Error type 6 at Line 23: The left-hand side of an assignment must be a variable "="
Error type 1 at Line 24: Undefined variable "a"
Error type 7 at Line 24: Type mismatched for operands ""
Error type 7 at Line 24: Type mismatched for operands "=="
Error type 9 at Line 26: Function is not applicable for arguments "Func"
